--- a/hello.html
+++ b/hello.html
@@ -17,5 +17,8 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<div>
+			<p>Je suis un joueur de tennis</p>
+		</div>
 	</body>
 </html>
