--- a/hello.html
+++ b/hello.html
@@ -17,8 +17,16 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<!-- description -->
 		<div>
+			<h1>Ma description</h1>
 			<p>Je suis un joueur de tennis</p>
+		</div>
+		
+		<!-- récompenses -->
+		<div>
+			<h1>Mes récompenses</h1>
+			<p>en construction ...</p>
 		</div>
 	</body>
 </html>
