--- a/hello.html
+++ b/hello.html
@@ -28,5 +28,12 @@
 			<h1>Mes récompenses</h1>
 			<p>en construction ...</p>
 		</div>
+		
+		<!-- mon gist -->
+		<div>
+			<h1>Mon gist</h1>
+			<p><script src="https://gist.github.com/DanyGirard/c7d0bed194ca14b9c8bb53cf7ef65b9d.js"></script></p>
+		</div>
+		
 	</body>
 </html>
