--- a/hello.html
+++ b/hello.html
@@ -26,7 +26,7 @@
 		<!-- récompenses -->
 		<div>
 			<h1>Mes récompenses</h1>
-			<p> <img src="images\medal_bronze.png"> </p>
+			<p> <img src="image\medal_bronze.png"> </p>
 		</div>
 		
 		<!-- mon gist -->
