suppression de joueur de badminton

--- a/hello.html
+++ b/hello.html
@@ -20,7 +20,7 @@
 		<!-- description -->
 		<div>
 			<h1>Ma description</h1>
-			<p>Je suis un joueur de tennis et de badminton</p>
+			<p>Je suis un joueur de tennis</p>
 		</div>
 		
 		<!-- récompenses -->
