--- a/hello.html
+++ b/hello.html
@@ -35,5 +35,11 @@
 			<p><script src="https://gist.github.com/DanyGirard/c7d0bed194ca14b9c8bb53cf7ef65b9d.js"></script></p>
 		</div>
 		
+		<!-- commandes git -->
+		<div>
+			<h1>Mes commandes git</h1>
+			<p>git pull</p>
+		</div>
+		
 	</body>
 </html>
